crates/test-ui/ui/nsobject_not_derefmut.stderr
error[E0596]: cannot borrow data in dereference of `Retained<NSObject>` as mutable
 --> ui/nsobject_not_derefmut.rs
  |
  |     let _: &mut NSObject = &mut *obj;
  |                            ^^^^^^^^^ cannot borrow as mutable
  |
  = help: trait `DerefMut` is required to modify through a dereference, but it is not implemented for `Retained<NSObject>`
